<resources>
    <string name="app_name">Clemente_Rodriguez_Eval1</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="favoritos_22">Favoritos: 22</string>
    <string name="san_mames">San Mames</string>
    <string name="mercado_de_la_rivera">Mercado de la Rivera</string>
    <string name="favoritos_7">Favoritos: 7</string>
    <string name="museo_vellas_artes">Museo Vellas Artes</string>
    <string name="lugares">Lugares</string>
    <string name="guggenheim">Guggenheim</string>
    <string name="favoritos_5">Favoritos: 5</string>
    <string name="volver_y_darle_favorito">Volver y darle favorito</string>
    <string name="volver">Volver</string>
    <string name="favoritos_6">Favoritos: 6</string>
</resources>