<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PantallaPrincipal">

    <ImageView
        android:id="@+id/imgSanma"
        android:layout_width="167dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        app:srcCompat="@drawable/sanmames" />

    <TextView
        android:id="@+id/lblFavSanma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos_22"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSanma"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/lblSanma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/san_mames"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSanma"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgMercado"
        android:layout_width="167dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"
        app:srcCompat="@drawable/mercadorivera" />

    <TextView
        android:id="@+id/lblMercado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mercado_de_la_rivera"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMercado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblFavMercado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos_7"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMercado"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/imgMuseo"
        android:layout_width="167dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        app:srcCompat="@drawable/museovellasartes" />

    <TextView
        android:id="@+id/lblMuseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/museo_vellas_artes"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMuseo"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/lblFavMuseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos_6"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMuseo"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugares"
        android:textColor="#F57C00"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <ImageView
        android:id="@+id/imgGuggen"
        android:layout_width="167dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/gugenheim" />

    <TextView
        android:id="@+id/lblGuggen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guggenheim"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGuggen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblFavGuggen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos_5"
        android:textColor="#F57C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGuggen"
        app:layout_constraintVertical_bias="0.065" />
</androidx.constraintlayout.widget.ConstraintLayout>